코드 리팩토링 : 불필요한 프로그램 제거(한자 OCR API 접속)